# wayle

./: .gitignore  .prettierrc  Cargo.toml  Justfile  README.md  flake.nix  wayle.spec
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: check-pr-title.yml  ci.yml  docs-deploy.yml  issue-labeler.yml  release.yml
crates/wayle-capture/: Cargo.toml
crates/wayle-capture/src/: capture.rs  lib.rs
crates/wayle-config/src/: click_action.rs  docs.rs  enum_variants.rs  lib.rs
crates/wayle-config/src/infrastructure/: error.rs  paths.rs  schema.rs  service.rs
crates/wayle-config/src/infrastructure/themes/: utils.rs
crates/wayle-config/src/property/: config.rs  mod.rs  traits.rs
crates/wayle-config/src/schemas/: barchart.rs
crates/wayle-config/src/schemas/bar/: mod.rs
crates/wayle-config/src/schemas/dropdowns/: custom.rs  mod.rs
crates/wayle-config/src/schemas/general/: mod.rs
crates/wayle-config/src/schemas/modules/: aurora.rs  cpuchart.rs  mod.rs  types.rs
crates/wayle-config/src/schemas/osd/: mod.rs  types.rs
crates/wayle-config/src/schemas/styling/: mod.rs  palette.rs
crates/wayle-config/src/schemas/types/: chart.rs  mod.rs
crates/wayle-config/src/schemas/wallpaper/: mod.rs  types.rs
crates/wayle-core/src/: lib.rs  paths.rs
crates/wayle-derive/src/: derives.rs  enum_variants.rs  field_utils.rs  lib.rs  wayle_config.rs  wayle_enum.rs
crates/wayle-derive/tests/: apply_config_layer.rs
crates/wayle-i18n/locales/en-US/: _settings.ftl
crates/wayle-i18n/locales/en-US/config/: _bar.ftl  _modules.ftl  _notification_popup.ftl  _osd.ftl  _styling.ftl  _wallpaper.ftl
crates/wayle-i18n/locales/fr/: _common.ftl  _settings.ftl
crates/wayle-i18n/locales/fr-FR/config/: _general.ftl  _styling.ftl  _wallpaper.ftl
crates/wayle-i18n/locales/fr/config/: _bar.ftl  _general.ftl  _modules.ftl  _notification_popup.ftl  _osd.ftl  _styling.ftl  _wallpaper.ftl
crates/wayle-i18n/src/: lib.rs
crates/wayle-i18n/tests/: i18n_coverage.rs
crates/wayle-icons/src/: manager.rs  registry.rs  transform.rs
crates/wayle-network/src/: lib.rs  service.rs
crates/wayle-network/src/wireguard/: mod.rs  monitoring.rs
crates/wayle-settings/: Cargo.toml
crates/wayle-settings/src/: app.rs  main.rs  property_handle.rs  row.rs  sidebar.rs
crates/wayle-settings/src/app/: css.rs  helpers.rs  methods.rs  mod.rs  reset.rs  sourceview_scheme.rs  window.rs
crates/wayle-settings/src/app/watchers/: mod.rs  palette.rs  (+2 more)
crates/wayle-settings/src/controls/: color.rs  enum_select.rs  file_picker.rs  font.rs  mod.rs  number.rs  slider.rs  text.rs  theme_selector.rs  toggle.rs
crates/wayle-settings/src/editors/: enum_select.rs  mod.rs  slider.rs
crates/wayle-settings/src/pages/: general.rs  helpers.rs  layout.rs  mod.rs  nav.rs  page.rs  spec.rs
crates/wayle-settings/src/row/: helpers.rs  methods.rs  mod.rs
crates/wayle-settings/src/sidebar/: helpers.rs  methods.rs  mod.rs
crates/wayle-settings/src/watchers/: mod.rs  palette.rs  scss_dev.rs  theme.rs
crates/wayle-shell/: Cargo.toml
crates/wayle-shell/locales/fr/: _bar.ftl  _notification_dropdown.ftl  _notification_popup.ftl  _osd.ftl  _weather.ftl
crates/wayle-shell/locales/fr-FR/: _bar.ftl  _notification_dropdown.ftl  _osd.ftl  _weather.ftl
crates/wayle-shell/src/: lib.rs
crates/wayle-shell/src/bootstrap/: mod.rs
crates/wayle-shell/src/shell/: mod.rs  services.rs
crates/wayle-shell/src/watchers/: sysinfo.rs
crates/wayle-styling/scss/: _functions.scss  main.scss
crates/wayle-styling/scss/base/: _index.scss
crates/wayle-styling/scss/components/: _index.scss
crates/wayle-styling/scss/modules/: _index.scss  _pomodoro.scss  _workspaces.scss
crates/wayle-styling/src/: lib.rs
crates/wayle-wallpaper/: Cargo.toml
crates/wayle-widgets/src/: lib.rs
crates/wayle-widgets/src/primitives/: mod.rs
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  wayle.css
docs/config/: bar.md  general.md  index.md  osd.md  styling.md  types.md  wallpaper.md
docs/config/modules/: aurora.md  battery.md  bluetooth.md  cava.md  clock.md  cpu.md  custom.md  dashboard.md  hyprland-workspaces.md  hyprsunset.md  idle-inhibit.md  keybind-mode.md  keyboard-input.md  media.md  microphone.md  netstat.md  network.md  notification.md  power.md  ram.md  separator.md  storage.md  systray.md  volume.md  weather.md  window-title.md  world-clock.md
docs/guide/: bars-and-layouts.md  cli.md  custom-icons.md  custom-modules.md  editing-config.md  getting-started-arch.md  getting-started-debian.md  getting-started-fedora.md  getting-started-nixos.md  getting-started.md  themes.md
docs/public/: _redirects
nix/: package.nix
nix/modules/: flake-home-manager.nix
packaging/rpm/: wayle.spec.in
resources/: com.wayle.settings.desktop  wayle.service
scripts/ci/: build-archive.sh  build-packages.sh
wayle/: Cargo.toml
wayle/src/: lib.rs  main.rs
wayle/src/cli/: app.rs
wayle/src/cli/config/: commands.rs  docs.rs  mod.rs
wayle/src/cli/panel/: start.rs
wayle/src/docs/: generator.rs  index_page.rs  mod.rs  module_page.rs  registry.rs  rustdoc.rs  types_page.rs
(+409 files in other folders)
