[workspace]
resolver = "2"
members = [
    "crates/wayle-audio",
    "crates/wayle-battery",
    "crates/wayle-bluetooth",
    "crates/wayle-brightness",
    "crates/wayle-capture",
    "crates/wayle-cava",
    "crates/wayle-core",
    "crates/wayle-config",
    "crates/wayle-derive",
    "crates/wayle-hyprland",
    "crates/wayle-i18n",
    "crates/wayle-icons",
    "crates/wayle-idle-inhibit",
    "crates/wayle-ipc",
    "crates/wayle-media",
    "crates/wayle-network",
    "crates/wayle-notification",
    "crates/wayle-power-profiles",
    "crates/wayle-shell",
    "crates/wayle-styling",
    "crates/wayle-sysinfo",
    "crates/wayle-systray",
    "crates/wayle-traits",
    "crates/wayle-wallpaper",
    "crates/wayle-weather",
    "crates/wayle-widgets",
    "wayle",
]
exclude = ["sandbox"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
repository = "https://github.com/wayle-rs/wayle"
license = "MIT"

[workspace.dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
bitflags = "2.9.4"
bytesize = "2"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.48", features = ["color", "derive"] }
console = "0.16"
derive_more = { version = "2.0.1", default-features = false, features = [
    "debug",
] }
dotenvy = "0.15"
fnv = "1.0"
futures = "0.3.31"
glob = "0.3.2"
gdk-pixbuf = { version = "0.21.2" }
gdk4 = { version = "0.10.1" }
glib = { version = "0.21.3" }
grass = "0.13.4"
gtk4 = { version = "0.10.1", features = ["v4_12"] }
gtk4-layer-shell = "0.7"
i18n-embed = { version = "0.16", features = [
    "desktop-requester",
    "fluent-system",
] }
i18n-embed-fl = "0.10"
indicatif = "0.18"
libc = "0.2.176"
memfd = "0.6"
minijinja = { version = "2.15", default-features = false, features = ["builtins", "serde"] }
libpulse-binding = "2.30.1"
notify = "8"
palette = "0.7"
png = "0.18"
rand = "0.9.2"
relm4 = { version = "0.10", features = ["macros"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "query", "charset"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
rust-embed = "8"
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_json_path = "0.7"
smithay-client-toolkit = "0.20"
sysinfo = { version = "0.33", default-features = false, features = ["system", "component", "disk", "network", "user"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.16"
toml = "0.9.7"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
unic-langid = "0.9"
wayland-client = "0.31"
wayland-protocols-hyprland = { version = "1.1.0", features = ["client"] }
wayle-audio = { path = "crates/wayle-audio" }
wayle-battery = { path = "crates/wayle-battery" }
wayle-brightness = { path = "crates/wayle-brightness" }
wayle-bluetooth = { path = "crates/wayle-bluetooth" }
wayle-capture = { path = "crates/wayle-capture" }
wayle-cava = { path = "crates/wayle-cava", features = ["vendored"] }
wayle-ipc = { path = "crates/wayle-ipc" }
wayle-core = { path = "crates/wayle-core" }
wayle-config = { path = "crates/wayle-config" }
wayle-derive = { path = "crates/wayle-derive" }
wayle-hyprland = { path = "crates/wayle-hyprland" }
wayle-icons = { path = "crates/wayle-icons" }
wayle-idle-inhibit = { path = "crates/wayle-idle-inhibit" }
wayle-media = { path = "crates/wayle-media" }
wayle-network = { path = "crates/wayle-network" }
wayle-notification = { path = "crates/wayle-notification" }
wayle-power-profiles = { path = "crates/wayle-power-profiles" }
wayle-styling = { path = "crates/wayle-styling" }
wayle-sysinfo = { path = "crates/wayle-sysinfo" }
wayle-systray = { path = "crates/wayle-systray" }
wayle-traits = { path = "crates/wayle-traits" }
wayle-wallpaper = { path = "crates/wayle-wallpaper" }
wayle-weather = { path = "crates/wayle-weather" }
wayle-widgets = { path = "crates/wayle-widgets" }
wildcard = "0.3"
zbus = { version = "5.11.0", default-features = false, features = ["tokio"] }

[workspace.lints.clippy]
cognitive_complexity = "warn"
expect_used = "deny"
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
manual_ok_or = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "allow"
panic = "warn"
similar_names = "allow"
too_many_lines = "warn"
unwrap_used = "deny"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[profile.release]
lto = true
codegen-units = 1
